[package]
name = "concurrent-download"
version = "0.1.0"
authors = ["franza <nico.franza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1.0.1" }
futures = { version = "0.3" }
structopt = "0.3"
tokio-stream = "0.1"
